[gd_scene load_steps=25 format=2]

[ext_resource path="res://assets/frames/necromancer_idle_anim_f0.png" type="Texture" id=1]
[ext_resource path="res://src/Creatures/CreatureStriking.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Creatures/Necromancer/NecromancerCollider.tres" type="Shape2D" id=3]
[ext_resource path="res://assets/frames/necromancer_run_anim_f2.png" type="Texture" id=4]
[ext_resource path="res://assets/frames/necromancer_idle_anim_f2.png" type="Texture" id=5]
[ext_resource path="res://assets/frames/necromancer_run_anim_f3.png" type="Texture" id=6]
[ext_resource path="res://assets/frames/necromancer_run_anim_f1.png" type="Texture" id=7]
[ext_resource path="res://assets/frames/necromancer_run_anim_f0.png" type="Texture" id=8]
[ext_resource path="res://assets/frames/necromancer_idle_anim_f3.png" type="Texture" id=9]
[ext_resource path="res://assets/frames/necromancer_idle_anim_f1.png" type="Texture" id=10]
[ext_resource path="res://src/Creatures/Necromancer/Necromancer.gd" type="Script" id=11]
[ext_resource path="res://src/Bullets/BulletStarMed.tscn" type="PackedScene" id=12]

[sub_resource type="Animation" id=1]
resource_name = "die"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true, false ]
}

[sub_resource type="Animation" id=2]
resource_name = "fire"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 1 ), ExtResource( 10 ), ExtResource( 5 ), ExtResource( 9 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "nope"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "run"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 8 ), ExtResource( 7 ), ExtResource( 4 ), ExtResource( 6 ) ]
}

[sub_resource type="OccluderPolygon2D" id=5]
polygon = PoolVector2Array( -7, 10, -7, 9, 5, 9, 5, 10 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 6, 7 )

[sub_resource type="CircleShape2D" id=7]
radius = 66.0076

[sub_resource type="Gradient" id=8]
offsets = PoolRealArray( 0, 0.329932, 0.738095, 0.792517, 1 )
colors = PoolColorArray( 0.309253, 0, 0.369697, 1, 0.671875, 0.149313, 0.00961786, 1, 0.824219, 0.00337101, 0.00337101, 1, 0.832031, 0.763161, 0.0306269, 1, 1, 0.890625, 0, 1 )

[sub_resource type="GradientTexture" id=9]
gradient = SubResource( 8 )

[sub_resource type="Curve" id=10]
_data = [ Vector2( 0.0135135, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.481036 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=11]
curve = SubResource( 10 )

[sub_resource type="ParticlesMaterial" id=12]
emission_shape = 1
emission_sphere_radius = 1.0
flag_disable_z = true
direction = Vector3( 1, 1, 0 )
spread = 90.0
gravity = Vector3( -5, -5, 0 )
initial_velocity = 2.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 2.0
scale_curve = SubResource( 11 )
color_ramp = SubResource( 9 )

[node name="Necromancer" instance=ExtResource( 2 )]
script = ExtResource( 11 )
MAX_HP = 200
MAX_SPEED = 35
moves = [ "horizontal", "vertical", "to_up_right", "to_bottom_left" ]
Bullet = ExtResource( 12 )

[node name="Sprite" parent="." index="0"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" parent="." index="1"]
visible = false
position = Vector2( 0, 3 )
shape = ExtResource( 3 )

[node name="AnimationPlayer" parent="." index="2"]
autoplay = "nope"
anims/die = SubResource( 1 )
anims/fire = SubResource( 2 )
anims/nope = SubResource( 3 )
anims/run = SubResource( 4 )

[node name="LightOccluder2D" parent="." index="3"]
occluder = SubResource( 5 )

[node name="Hurtbox" parent="." index="4"]
visible = false

[node name="Collider" parent="Hurtbox" index="0"]
position = Vector2( 0, 3 )
shape = SubResource( 6 )

[node name="Hitbox" parent="." index="5"]
visible = false
damage_obj = {
"pure_damage": 5
}

[node name="Collider" parent="Hitbox" index="0"]
position = Vector2( 0, 3 )
shape = ExtResource( 3 )

[node name="VisibilityNotifier2D" parent="." index="6"]
visible = false

[node name="PlayerDetector" parent="." index="11"]
visible = false

[node name="CollisionShape2D" parent="PlayerDetector" index="0"]
position = Vector2( 0, 3 )
shape = SubResource( 7 )

[node name="EyeLeft" type="Particles2D" parent="." index="12"]
position = Vector2( 0, 2 )
amount = 35
lifetime = 0.15
process_material = SubResource( 12 )

[node name="EyeRight" type="Particles2D" parent="." index="13"]
position = Vector2( 4, 2 )
amount = 35
lifetime = 0.15
process_material = SubResource( 12 )

[node name="RightPosition" type="Position2D" parent="." index="14"]
position = Vector2( 16, 3 )

[node name="LeftPosition" type="Position2D" parent="." index="15"]
position = Vector2( -17, 3 )

[node name="BottomPosition" type="Position2D" parent="." index="16"]
position = Vector2( 0, 19 )

[node name="TopPosition" type="Position2D" parent="." index="17"]
position = Vector2( 0, -16 )

[node name="RaisingTimer" type="Timer" parent="." index="18"]
wait_time = 10.0
autostart = true

[node name="RayCastRight" type="RayCast2D" parent="." index="19"]
position = Vector2( 0, 2 )
enabled = true
cast_to = Vector2( 25, 0 )
collision_mask = 2

[node name="RayCastLeft" type="RayCast2D" parent="." index="20"]
position = Vector2( 0, 2 )
enabled = true
cast_to = Vector2( -25, 0 )
collision_mask = 2

[node name="RayCastTop" type="RayCast2D" parent="." index="21"]
position = Vector2( 0, 2 )
enabled = true
cast_to = Vector2( 0, -25 )
collision_mask = 2

[node name="RayCastBottom" type="RayCast2D" parent="." index="22"]
position = Vector2( 0, 2 )
enabled = true
cast_to = Vector2( 0, 25 )
collision_mask = 2
[connection signal="timeout" from="RaisingTimer" to="." method="_on_RaisingTimer_timeout"]

[editable path="Hurtbox"]

[editable path="Hitbox"]

[editable path="PlayerDetector"]
